--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -52,10 +52,12 @@
     "typescript": "4.4.4"
   },
   "dependencies": {
+    "@types/http-errors": "^2.0.1",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
+    "http-errors": "^2.0.0",
     "jest": "27.4.3",
     "jsonwebtoken": "8.5.1",
     "mysql2": "2.3.3",
