--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "test": "env $(cat ./app/backend/.env) jest -i --forceExit --verbose",
     "test:browser": "SHOW_BROWSER=true npm test",
     "test:debug": "DEBUG=true npm test",
-    "compose:up": "cd app && docker-compose up -d --build",
     "compose:down": "cd app && docker-compose down --remove-orphans",
-    "logs": "cd app && docker-compose logs -f"
+    "compose:up": "cd app && docker-compose up -d --build",
+    "compose:restart": "npm run compose:down && npm run compose:up",
+    "logs": "cd app && docker-compose logs -f",
+    "db:reset": "cd app/backend && npm run db:reset && cd ../..",
+    "container:restore": "npm run compose:restart && npm run db:reset"
   },
   "author": "Trybe",
   "devDependencies": {
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
+    "@types/http-errors": "^2.0.1",
     "axios": "0.26.0",
+    "http-errors": "^2.0.0",
     "jest": "26.6.0",
     "mocha": "9.2.0",
     "mysql2": "2.3.3",
