--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "compose:restart": "npm run compose:down && npm run compose:up",
     "logs": "cd app && docker-compose logs -f",
     "db:reset": "cd app/backend && npm run db:reset && cd ../..",
-    "container:restore": "npm run compose:restart && npm run db:reset"
+    "container:restore": "npm run compose:restart && npm run db:reset",
+    "test:coverage": "cd app/backend && npm run test:coverage && cd ../..",
+    "test:backend": "cd app/backend && npm run test && cd ../.."
   },
   "author": "Trybe",
   "devDependencies": {
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
-    "@types/http-errors": "^2.0.1",
+    "@types/chai-as-promised": "^7.1.5",
     "axios": "0.26.0",
-    "http-errors": "^2.0.0",
     "jest": "26.6.0",
     "mocha": "9.2.0",
     "mysql2": "2.3.3",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "camelcase": "6.3.0",
+    "chai-as-promised": "^7.1.1",
     "http-status-codes": "2.2.0",
     "jsonwebtoken": "8.5.1",
     "puppeteer": "13.2.0",
