--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app-backend
 
 # Copiar os package.json e package-lock.json para o container
 COPY ./package* ./
+COPY ./packages.npm ./
 
 # Instalar as dependências Node
 RUN ["npm", "install"]
